add edit grammar